# EdgeDetectionViewer

./: .gitignore  README.md  SETUP.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/edgeviewer/: CameraGLSurfaceView.java  CameraRenderer.java  MainActivity.java
web/: package.json
web/public/: index.html
web/src/: viewer.ts
